maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:2: error: not found: type ==
def trouveSortie(): Array[Int] == {
                               ^