maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
def trouveSortie(): Array[Int] == {
  
}
override def run() {
  
}